name:                automata
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jakubriha/automata#readme
license:             BSD3
license-file:        LICENSE
author:              Jakub Riha
maintainer:          jakubriha@outlook.com
copyright:           Jakub Riha
category:            program
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Operations
                     , Testing
                     , Helpers
                     , Parsing.General
                     , Parsing.Fta
                     , Parsing.Helpers
                     , Types.Fta
                     , Types.Fa
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , parsec3-numbers
                     , bytestring
  default-language:    Haskell2010

executable automata-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , automata
                     , parsec
  default-language:    Haskell2010

test-suite automata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-suite
  main-is:             Spec.hs
  build-depends:       base
                     , automata
                     , hspec
                     , QuickCheck
  other-modules:       Tests.Common
                     , Tests.Operations.ComplementSpec
                     , Tests.Operations.DeterminizeSpec
                     , Tests.Operations.IntersectSpec
                     , Tests.Operations.IsEmptySpec
                     , Tests.Operations.IsSubsetOfSpec
                     , Tests.Operations.IsUniversalSpec
                     , Tests.Operations.RunSpec
                     , Tests.Operations.UnionSpec
                     , Tests.Parsing.GeneralSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jakubriha/automata
